# pynotion

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  locustfile.py  pyproject.toml
.github/workflows/: ci.yml
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/tests/: test_auth.py
config/: asgi.py  logging.py  settings.py  urls.py  views.py
config/settings/: base.py  dev.py  prod.py
config/tests/: test_health.py  test_logging.py  test_settings.py
databases/: api.py  apps.py  models.py  properties.py  query.py  schemas.py  serializers.py
databases/migrations/: 0001_initial.py  0002_databaserow_values_gin.py  0003_databaseview.py
databases/tests/: test_api.py  test_models.py  test_properties.py  test_query.py
docs/: postgres-migration.md
docs/plan/: 01-prd.md  02-architecture.md  03-roadmap.md  04-tasks.md  README.md
e2e/: conftest.py  test_journeys.py
exports/: api.py  apps.py  markdown.py  models.py  queue.py  schemas.py  serializers.py  tasks.py  webhooks.py
exports/migrations/: 0001_initial.py  0002_webhook_webhookdelivery_and_more.py
exports/tests/: test_api.py  test_markdown.py  test_webhook_api.py  test_webhooks.py
pages/: admin.py  api.py  api_blocks.py  api_pages.py  api_shares.py  cache.py  consumers.py  crdt.py  crdt_store.py  history.py  http.py  models.py  ordering.py  permissions.py  realtime.py  routing.py  schemas.py  search.py  serializers.py  urls.py  views.py
pages/migrations/: 0001_initial.py  0002_page_owner_pageshare.py  0003_search_trgm.py  0004_remove_block_pages_block_page_id_a93eaa_idx_and_more.py  0005_block_version.py  0006_pagesnapshot.py
pages/tests/: helpers.py  test_api.py  test_api_ninja.py  test_crdt_collab.py  test_crdt_spike.py  test_fixtures.py  test_history.py  test_models.py  test_nesting.py  test_ordering.py  test_performance.py  test_permissions.py  test_realtime.py  test_search.py  test_shares.py  test_views.py
static/css/: app.css  auth.css  databases.css  editor.css  sidebar.css  tokens.css
static/js/: api.js  app.js  databases.js  editor.js  modals.js  realtime.js  sidebar.js  slashmenu.js
templates/: app.html  base.html
templates/accounts/: login.html  signup.html
