[project]
name = "pynotion"
version = "0.1.0"
description = "Notion クローン — Python (Django) による車輪の再発明"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2,<6.0",
    "django-environ>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py"]
testpaths = ["pages/tests", "config/tests"]
markers = [
    "unit: 単体テスト",
    "integration: 統合テスト",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
