[project]
name = "pynotion"
version = "0.1.0"
description = "Notion クローン — Python (Django) による車輪の再発明"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2,<6.0",
    "django-environ>=0.11",
    "whitenoise>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
]
prod = [
    "gunicorn>=22.0",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

# 配布パッケージではない (Django プロジェクト) ため、
# setuptools のパッケージ自動検出を無効化する
[tool.setuptools]
packages = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py"]
testpaths = ["pages/tests", "config/tests", "accounts/tests"]
markers = [
    "unit: 単体テスト",
    "integration: 統合テスト",
]

[tool.coverage.run]
omit = ["*/migrations/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
