[project]
name = "pynotion"
version = "0.1.0"
description = "Notion クローン — Python (Django) による車輪の再発明"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2,<6.0",
    "django-environ>=0.11",
    "whitenoise>=6.6",
    "django-ninja>=1.3",
    "django-ratelimit>=4.1",
    # リアルタイム同期 (WebSocket)。daphne は ASGI runserver と本番 ASGI 配信に使う。
    "channels>=4.1",
    "daphne>=4.1",
    # 文字粒度の競合解決 (CRDT)。Yjs 互換のサーバ側バインディング。
    # y-py は更新停止のため後継の pycrdt を採用 (Phase 4-A スパイクで選定)。
    "pycrdt>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "django-debug-toolbar>=4.4",
    "locust>=2.29",
    "pytest-playwright>=0.5",
]
prod = [
    "gunicorn>=22.0",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    # 本番の Redis チャネルレイヤ (複数ワーカー間で WebSocket をブロードキャスト)
    "channels-redis>=4.2",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

# 配布パッケージではない (Django プロジェクト) ため、
# setuptools のパッケージ自動検出を無効化する
[tool.setuptools]
packages = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py"]
testpaths = ["pages/tests", "config/tests", "accounts/tests"]
markers = [
    "unit: 単体テスト",
    "integration: 統合テスト",
    "e2e: ブラウザ E2E (Playwright、testpaths 外。専用ジョブで実行)",
]

[tool.coverage.run]
omit = ["*/migrations/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
